# meeting-minutes

./: .gitignore  BACKEND_INTEGRATION.md  GETTING_STARTED.md  PROJECT_SUMMARY.md  README.md  STAGE_2_COMPLETE.md  TESTING_GUIDE.md  package-lock.json  start-dev.sh  start-simple.bat  start.sh
backend/: .gitignore  FILES_INDEX.md  QUICKSTART.md  README.md  TESTING_GUIDE.md  pyproject.toml  requirements.txt  run_server.bat  run_server.sh  setup.bat  setup.sh
backend/app/: __init__.py  config.py  main.py
backend/app/models/: __init__.py  schemas.py
backend/app/routes/: meeting.py
backend/app/services/: __init__.py  asr.py  diarization.py  llm.py  pipeline.py  rag.py
backend/app/storage/: __init__.py
backend/scripts/: run_local_pipeline.py
frontend/: README.md  env.example.txt  index.html  package-lock.json  package.json  setup.bat  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts  meetings.ts
frontend/src/components/: AudioRecorder.tsx  FileUpload.tsx  Layout.tsx  MeetingCard.tsx  MeetingList.tsx  QAChat.tsx  SummaryPanel.tsx  TranscriptView.tsx
frontend/src/components/layout/: BackgroundDecor.tsx
frontend/src/pages/: Dashboard.tsx  Home.tsx  MeetingDetail.tsx  ProcessingStatus.tsx  Upload.tsx
frontend/src/types/: meeting.ts
